--- a/Pipfile
+++ b/Pipfile
@@ -20,9 +20,11 @@ django-markdown-deux = "==1.0.5"
 django-autocomplete-light = "==3.2.10"
 django-select2 = "==6.0.2"
 django-storages = "==1.7.1"
-boto3 = "==1.7.59"
+boto3 = "==1.9.26"
 gunicorn = "==19.9.0"
 psycopg2 = "==2.7.5"
+zappa = "*"
+zappa-django-utils = "*"
 
 [dev-packages]
 coveralls = "==1.4.0"
@@ -31,4 +33,4 @@ nose = "==1.3.7"
 docker-compose = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
